cmake_minimum_required(VERSION 3.31)
project(LeetCode)

set(CMAKE_CXX_STANDARD 20)

add_executable(T42 src/LeetCode_100/T42.cpp)
add_executable(T1 src/LeetCode_100/T1.cpp)
add_executable(T11 src/LeetCode_100/T11.cpp)
add_executable(T15 src/LeetCode_100/T15.cpp)
add_executable(T49 src/LeetCode_100/T49.cpp)
add_executable(T128 src/LeetCode_100/T128.cpp)
add_executable(T283 src/LeetCode_100/T283.cpp)
add_executable(T3 src/LeetCode_100/T3.cpp)
add_executable(demo demo.cpp)
add_executable(T438 src/LeetCode_100/T438.cpp)
add_executable(T200 src/LeetCode_100/T200.cpp)
add_executable(T207 src/LeetCode_100/T207.cpp)
add_executable(T295 src/LeetCode_100/T295.cpp)
add_executable(T84 src/LeetCode_100/T84.cpp)
add_executable(T239 src/LeetCode_100/T239.cpp)
add_executable(T76 src/LeetCode_100/T76.cpp)
add_executable(T139 src/LeetCode_100/T139.cpp)
add_executable(T322 src/LeetCode_100/T322.cpp)
add_executable(T279 src/LeetCode_100/T279.cpp)
add_executable(T32 src/LeetCode_100/T32.cpp)
add_executable(T2 src/HWOD/T2.cpp)
add_executable(T516 src/LeetCode/DP/T516.cpp)
add_executable(T1143 src/LeetCode/DP/T1143.cpp)
add_executable(T714 src/LeetCode/DP/T714.cpp)
add_executable(T583 src/LeetCode/DP/T583.cpp)
add_executable(T94 src/Kama/T94.cpp)
add_executable(T94_SPFA src/Kama/T94_SPFA.cpp)
add_executable(T300 src/LeetCode/DP/T300.cpp)
add_executable(T101 src/Kama/T101.cpp)
add_executable(T103 src/Kama/T103.cpp)
add_executable(T104 src/Kama/T104.cpp)
add_executable(T110 src/Kama/T110.cpp)
add_executable(T105 src/Kama/T105.cpp)
add_executable(T107 src/Kama/T107.cpp)
add_executable(T108 src/Kama/T109.cpp)
add_executable(T53 src/Kama/T53.cpp)
add_executable(T53_kruskal src/Kama/T53_kruskal.cpp)
add_executable(T47 src/Kama/T47.cpp)
add_executable(T47_Heap src/Kama/T47_Heap.cpp)
add_executable(T452 src/LeetCode/Greedy/T452.cpp)
add_executable(T33 src/LeetCode/Array/T33.cpp)
add_executable(T189 src/LeetCode/Array/T189.cpp)
add_executable(T59 src/LeetCode/Array/T59.cpp)
add_executable(T977 src/LeetCode/Array/T977.cpp)
add_executable(T274 src/LeetCode/Array/T274.cpp)
add_executable(T238 src/LeetCode/Array/T238.cpp)
add_executable(T135 src/LeetCode/Array/T135.cpp)